# poker-engine

./: .gitignore  CMakeLists.txt  README.md
ompeval/omp/: EquityCalculator.h
src/: Card.cpp  Card.h  CardCombos.cpp  CardCombos.h  main.cpp
